<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <import type="android.view.View" />

        <variable
            name="orderDetailsModel"
            type="com.example.dindinn_atish.models.Data" />

        <variable
            name="showProgress"
            type="Boolean" />

        <variable
            name="showAccept"
            type="Boolean" />


    </data>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/grey_border"
        android:orientation="vertical"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textViewOrderId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                app:orderId="@{orderDetailsModel}"
                tools:text="@string/text_dummy_order_id" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:text="@string/text_auto_reject" />

            <TextView
                android:id="@+id/textViewOrderTimeOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                app:initialTime="@{orderDetailsModel}"
                tools:text="@string/text_two_mins" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textViewOrderTimeStamp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                app:createdAt="@{orderDetailsModel}"
                tools:text="@string/text_dummy_order_time" />


            <ProgressBar
                android:id="@+id/progressbarTimeOut"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:max="100"
                android:progress="0" />


        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAccept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/blue_btn_bg"
                android:paddingStart="20dp"
                android:paddingTop="4dp"
                android:paddingEnd="20dp"
                android:paddingBottom="4dp"
                android:text="@string/text_accept"
                android:textColor="@color/white"
                android:visibility="@{showAccept?View.VISIBLE:View.GONE, default=visible}" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnExpired"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:background="@drawable/red_btn_bg"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/text_expired"
                android:textColor="@color/white"
                android:visibility="@{showAccept?View.GONE:View.VISIBLE, default=gone}" />


        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="4dp"
            android:paddingEnd="4dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewItemQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/primary_text_color"
                    app:orderQuantity="@{orderDetailsModel}"
                    tools:text="@string/text_dummy_order_quantity" />

                <TextView
                    android:id="@+id/textViewItemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{orderDetailsModel.title}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/primary_text_color"
                    tools:text="@string/text_chicken_noodles" />


            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerviewOrderAddOnItems"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="24dp"
                android:layout_weight="1" />


            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorGrey"
                android:paddingTop="10dp" />

            <TextView
                android:id="@+id/textViewOrderItemCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:totalQty="@{orderDetailsModel}"
                tools:text="@string/text_dummy_item_count" />


        </LinearLayout>


    </LinearLayout>

</layout>